[package]
name = "mio-ubus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69"
pkg-config = "0.3"

[dependencies]
container_of = "0.5"
lazy_static = "1.5"
log = { version = "0.4", features = ["std"] }
mio = { version = "1.0", features = ["os-poll", "os-ext", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ubus = "0.1.5"
